<resources>
    <string name="app_name">OpenPlatformMeetingSDK</string>
    <string name="hint_user_name">用户名</string>
    <string name="hint_pwd">密码</string>
    <string name="login">登录</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="please_wait">请稍后…</string>
    <string name="register">注册</string>
    <string name="hint_email">邮箱（选填）</string>
    <string name="hint_name">名字（选填）</string>
    <string name="hint_last_name">姓氏（选填）</string>
    <string name="register_and_login">注册并登录</string>
    <string name="user_name_is_used">用户名被占用</string>
    <string name="img_desc">todo</string>
    <string name="join_meeting">加入会议</string>
    <string name="quick_meeting">快速会议</string>
    <string name="appoint_meeting">预约会议</string>
    <string name="label_meeting_name">会议名：</string>
    <string name="label_meeting_number">房间号：</string>
    <string name="label_meeting_creator">创建人：</string>
    <string name="label_meeting_date">时间段：</string>
    <string name="meeting_list_date">%s ~\n%s</string>
    <string name="meeting_number">会议号</string>
    <string name="your_name">您的名字</string>
    <string name="open_mic">开启麦克风</string>
    <string name="open_speaker">开启扬声器</string>
    <string name="open_camera">开启摄像头</string>
    <string name="meeting_duration">会议时长</string>
    <string name="placeholder_min">%d分钟</string>
    <string name="enter_meeting">进入会议</string>
    <string name="meeting_theme">会议主题</string>
    <string name="begin_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="join_meeting_pwd">入会密码</string>
    <string name="done">完成</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="date_colon">\u0020:\u0020</string>
    <string name="date_formatter">%d年%d月%d日\u0020%d:%d</string>
    <string name="please_input_meeting_theme">请输入会议主题</string>
    <string name="please_input_join_meeting_pwd">请输入入会密码</string>
    <string name="member_join_meeting_mute_sound">成员入会时静音</string>
    <string name="appoint_meeting_success">预约会议成功</string>
    <string name="choice_meeting_duration">选择会议时长</string>
    <string name="placeholder_meeting_name">user%s的会议室</string>
    <string name="default_username">user%s</string>
    <string name="please_input_meeting_number">请输入会议号</string>
    <string name="please_input_username">请输入您的名字</string>
    <string name="speaker">扬声器</string>
    <string name="switch_camera">切换摄像头</string>
    <string name="poll">投票</string>
    <string name="group">分组</string>
    <string name="chat">聊天</string>
    <string name="close_mic">关闭麦克风</string>
    <string name="close_camera">关闭摄像头</string>
    <string name="member_count">成员（%s）</string>
    <string name="share">共享</string>
    <string name="please_input_content">请输入内容</string>
    <string name="screen">屏幕</string>
    <string name="whiteboard">白板</string>
    <string name="alert">提示</string>
    <string name="repeat_login">当前用户已在其他设备登录!</string>
    <string name="kick_out">您被踢出房间!</string>
    <string name="say_something">说点什么…</string>
    <string name="send">发送</string>
    <string name="send_target">发送对象：%s</string>
    <string name="colon">：</string>
    <string name="everyone">全体</string>
    <string name="stop_share">停止共享</string>
    <string name="room_closed">房间已关闭</string>
    <string name="close_room">关闭房间</string>
    <string name="leave_room">离开房间</string>
    <string name="only_host">只有房主可以</string>
    <string name="create_poll">创建投票</string>
    <string name="commit">提交</string>
    <string name="poll_theme">投票主题</string>
    <string name="is_anonymous">是否匿名</string>
    <string name="add_question">添加问题</string>
    <string name="problem">题目</string>
    <string name="single_choice">单选</string>
    <string name="multiple">多选</string>
    <string name="question_type">题型：</string>
    <string name="option_num">选项%d</string>
    <string name="add_option">添加选项</string>
    <string name="keep_least_two_selections">至少保留两个选项</string>
    <string name="action_settings">Settings</string>
    <string name="mic">麦克风</string>
    <string name="camera">摄像头</string>
</resources>