<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_soundMode"
        android:icon="@mipmap/ic_speaker"
        android:title="@string/speaker"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_switch"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/switch_camera"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_poll"
        android:title="@string/poll"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_group"
        android:title="@string/group"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_chat"
        android:title="@string/chat"
        app:showAsAction="never" />
</menu>