<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.jjl.dxz.platform.meeting.vm.JoinMeetingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="8dp"
        tools:context=".ui.JoinMeetingActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meeting_number"
                android:inputType="number"
                android:maxLength="9"
                android:text="@={vm.number}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_join"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:onClick="@{()->vm.join()}"
            android:text="@string/join_meeting"
            app:layout_constraintTop_toBottomOf="@id/et_number" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sm_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:checked="@={vm.openMic}"
            android:text="@string/open_mic"
            app:layout_constraintTop_toBottomOf="@id/btn_join" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sm_speaker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@={vm.openSpeaker}"
            android:text="@string/open_speaker"
            app:layout_constraintTop_toBottomOf="@id/sm_audio" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sm_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@={vm.openCamera}"
            android:text="@string/open_camera"
            app:layout_constraintTop_toBottomOf="@id/sm_speaker" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>