<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.jjl.dxz.platform.meeting.vm.poll.PollMainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="8dp"
        tools:context=".ui.poll.NewPollFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/create_poll">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/img_desc"
                android:onClick="@{()->vm.commit()}"
                android:src="@android:drawable/ic_menu_save" />
        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/til_theme"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/poll_theme"
                android:text="@{vm.pollTheme}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_isAnonymous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:checked="@{vm.isAnonymous}"
            android:text="@string/is_anonymous"
            app:layout_constraintTop_toBottomOf="@id/til_theme" />

        <Button
            android:id="@+id/btn_addQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:onClick="@{()->vm.addQuestion()}"
            android:text="@string/add_question"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/btn_addQuestion"
            app:layout_constraintTop_toBottomOf="@id/switch_isAnonymous" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>