<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="question"
            type="com.jjl.dxz.platform.meeting.bean.pojo.Question" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingTop="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_problem"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconDrawable="@drawable/ic_delete"
            app:endIconMode="custom"
            app:endIconTint="@android:color/holo_red_dark"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/problem" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/question_type"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/group_type"
            app:layout_constraintEnd_toStartOf="@id/group_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/group_type" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/group_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:checkedButton="@id/btn_single"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_type"
            app:layout_constraintTop_toBottomOf="@id/til_problem"
            app:singleSelection="true">

            <Button
                android:id="@+id/btn_single"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/single_choice" />

            <Button
                android:id="@+id/btn_multiple"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiple" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>