<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.jjl.dxz.platform.meeting.vm.QuickMeetingViewModel" />

        <variable
            name="event"
            type="com.jjl.dxz.platform.meeting.ui.QuickMeetingActivity.Event" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="8dp"
        android:paddingTop="8dp"
        tools:context=".ui.QuickMeetingActivity">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sm_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@={vm.openCamera}"
            android:text="@string/open_camera"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="@{()->event.meetingDuration()}"
            app:layout_constraintTop_toBottomOf="@id/sm_camera">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="8dp"
                android:text="@string/meeting_duration" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/placeholder_min(vm.meetingDuration)}" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_join"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:onClick="@{()->vm.createAndJoin()}"
            android:text="@string/enter_meeting"
            app:layout_constraintTop_toBottomOf="@id/ll_duration" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>