<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="msg"
            type="androidx.lifecycle.MutableLiveData&lt;String&gt;" />

        <variable
            name="event"
            type="com.jjl.dxz.platform.meeting.widget.dialog.ChatDialogFragment.Event" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_chat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/tv_sendTarget"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sendTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:onClick="@{()->event.onClickTarget()}"
            android:paddingVertical="8dp"
            android:text="@string/send_target"
            app:layout_constraintBottom_toTopOf="@id/ll_msg" />

        <LinearLayout
            android:id="@+id/ll_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/say_something"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={msg}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:onClick="@{()->event.onSendMsg()}"
                android:text="@string/send" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>